--- a/app/javascript/dashboard/i18n/locale/en/login.json
+++ b/app/javascript/dashboard/i18n/locale/en/login.json
@@ -1,6 +1,6 @@
 {
   "LOGIN": {
-    "TITLE": "Login to Ongair",
+    "TITLE": "Login to Betikare",
     "EMAIL": {
       "LABEL": "Email",
       "PLACEHOLDER": "Email eg: someone@example.com"
@@ -11,7 +11,7 @@
     },
     "API": {
       "SUCCESS_MESSAGE": "Login Successful",
-      "ERROR_MESSAGE": "Could not connect to Ongair, Please try again later",
+      "ERROR_MESSAGE": "Could not connect to Betikare, Please try again later",
       "UNAUTH": "Username / Password Incorrect. Please try again"
     },
     "FORGOT_PASSWORD": "Forgot your password?",
